# elparadisogonzalo.com

./: .bash_history  .bashrc  .bashrc.backup  .env  .gitconfig  .gitcookies  .gitignore  .gitmodules  .npmrc  .wget-hsts  .yarnrc  404.md  Analytics-engine  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  README.md  SECURITY.md  Security  VECTORIZE-INDEX  _config.yml  auth.js  chat_test.py  eslint.config.js  hello.txt.asc  index.html  index.js  list-models.js  my-models.yml  openai.config.js  output.txt  package-lock.json  package.json  path.bash.inc  plugin.js  pom.xml  pyproject.toml  server.js  setup.py  trigger.txt  (+4 more)
.config/gcloud/: .last_update_check.json  access_tokens.db  application_default_credentials.json  credentials.db  default_configs.db  (+1 more)
.config/gh/: config.yml  hosts.yml
.devcontainer/: devcontainer.json  elparadisogonzalo-container.json
.gsutil/: credstore2
ELP-DATABASE/: my-binding
MY_DATABASE/: my-model
VECTORIZE-INDEX1/: my-binding
_site/: CHANGELOG.html  Images  MY-IMAGES  README.md  SECURITY.html  SECURITY.md  csharp-all
abi/: abi.json
codeql/: csharp-queries  threat-models
config/: openai.config.js
elp/: package.json
elparadiso/: package.json
elparadiso-claim/: package-lock.json
elparadisogonzalo-api/: Cargo.toml
frontend/: capacitor.config.json  index.html  package-lock.json  package.json
frontend_broken/: package.json
mcp-server/: package-lock.json  package.json
public/: sheet_20260426_210142_generated_by_Kimi_AI.csv
security/: security
smart-contract/: package-lock.json
user_data/: node.js  user_data
(+588 files in other folders)
