[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elparadisogonzalo"
version = "2.0.0"
description = "Elparadisogonzalo Python package"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "azehagowa-creator", email = "genyoungclip@gmail.com" }
]
